Update paths to js and css files

--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -2,7 +2,7 @@
 
 {% block extrahead %}
   {{ super() }}
-  <link rel="stylesheet" href="/hdfstream/common.css">
+  <link rel="stylesheet" href="_static/common.css">
   <script crossorigin src="https://unpkg.com/@msgpack/msgpack@2.8.0"></script>
   <script crossorigin src="https://unpkg.com/dompurify@3.2.3/dist/purify.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@11.11.1/styles/default.min.css">
